# Programming-Project-Coursework-2

./: CMakeLists.txt  Makefile  PlanningReport.md  README.md  SDL2_install.sh  dij.c  dij.h  main.c  main.h  routeFinding.c  routeFinding.h  unittest1.c  unittest1.h  visualization.c  visualization.h
include/: routeFinding.h  visualization.h
src/: interface.c  interface.h  main.c  routeFinding.c  unittest1.c  visualization.c
